[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "horde_survival"
version = "0.1.0"

[dependencies]
gfx = "0.16.2"
lazy_static = "0.2.8"
regex = "0.2.2"
shred-derive = "0.3.0"

[dependencies.common]
path = "common"

[dependencies.control]
path = "control"

[dependencies.graphics]
path = "graphics"

[dependencies.image_utils]
path = "image_utils"

[dependencies.math]
path = "math"

[dependencies.physics]
path = "physics"

[dependencies.window]
path = "window"

[workspace]
