[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "common"
version = "0.1.0"

[dependencies]
cgmath = "0.15.0"
log = "0.3.8"
nalgebra = "0.11"
ncollide = "0.11"
shred = "0.5.0"
specs = "0.10.0"
time = "0.1.37"

[dependencies.nphysics3d]
features = ["threadsafe"]
branch = "horde"
git = "https://github.com/pengowen123/nphysics"
