[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "common"
version = "0.1.0"

[dependencies]
cgmath = "0.16.0"
glutin = "0.17"
log = "0.3.8"
shred = "0.7"
specs = "0.12"
time = "0.1.37"
gfx = "0.17"
gfx_device_gl = "0.15.2"
gfx_window_glutin = "0.25"
shrev = "1.0.1"
slog = "2.2.3"
gfx_core = "0.8.2"
structopt = "0.2.10"
serde_derive = "1.0.70"
serde = "1.0.70"
nphysics3d = "0.9.1"
nalgebra = "0.16.0"
ncollide3d = "0.17.1"
quick-error = "1.2.2"

[dependencies.conrod]
branch = "horde"
features = ["winit", "gfx_rs"]
git = "https://github.com/pengowen123/conrod"
