[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "gar"
version = "0.1.0"

[dependencies]
cgmath = "0.12.0"
gfx = "0.14.0"
gfx_window_glutin = "0.14.0"
glutin = "0.7.4"
shader_version = "0.2.2"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.serde]
optional = true
version = "0.9.9"

[features]
default = []
