[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "graphics"
version = "0.1.0"

[dependencies]
genmesh = "0.5.0"
gfx = "0.17"
quick-error = "1.2"
shred-derive = "0.3.0"
slog = "2.2.3"
ui = { path = "../ui" }
assets = { path = "../assets" }
rendergraph = { path = "rendergraph" }

[dependencies.common]
path = "../common"

[dependencies.image_utils]
path = "../image_utils"

[dependencies.math]
path = "../math"

[dependencies.obj]
features = ["genmesh"]
version = "0.8.0"

[dependencies.window]
path = "../window"
