[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "sys"
version = "0.1.0"

[dependencies]
alga = "0.5.1"
bitflags = "0.9.1"
cgmath = "0.14"
genmesh = "0.5.0"
glutin = "0.9"
log = "0.3.8"
nalgebra = "0.11"
ncollide = "0.11"
quick-error = "1.2.0"
rayon = "0.7.1"
shred = "0.4"
shred-derive = "0.3"
specs = "0.9"
time = "0.1.37"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx"

[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx"

[dependencies.image_utils]
path = "image_utils"

[dependencies.nphysics3d]
features = ["threadsafe"]
path = "/home/pengowen/forks/nphysics/build/nphysics3d/"

[dependencies.obj]
features = ["genmesh"]
version = "0.8.0"

[dev-dependencies]
approx = "0.1.1"
