[package]
name = "ui"
version = "0.1.0"
authors = ["Owen Sanchez <pengowen816@gmail.com>"]

[dependencies]
specs = "0.10.0"
shred = "0.5.0"
shred-derive = "0.3.0"
common = { path = "../common" }
window = { path = "../window" }
slog = "2.2.3"

[dependencies.conrod]
branch = "horde"
git = "https://github.com/pengowen123/conrod"
features = ["winit", "gfx_rs"]
