[package]
name = "ui"
version = "0.1.0"
authors = ["Owen Sanchez <pengowen816@gmail.com>"]

[dependencies]
shred-derive = "0.3.0"
common = { path = "../common" }
window = { path = "../window" }
slog = "2.2.3"
petgraph = "0.4.12"
assets = { path = "../assets" }

[dependencies.conrod]
branch = "horde"
git = "https://github.com/pengowen123/conrod"
features = ["winit", "gfx_rs"]
