[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "rendergraph"
version = "0.1.0"

[dependencies]
quick-error = "1.2.2"
assets = { path = "../../assets" }

[dependencies.common]
path = "../../common"

[dependencies.image_utils]
path = "../../image_utils"

[dev-dependencies]
gfx = "0.17.1"

[[example]]
name = "triangle"
crate-type = ["bin"]
